--- a/style.css
+++ b/style.css
@@ -40,33 +40,38 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    gap: 10px;
+    /* align-items: center; */
+    padding: 0 5px;
+    gap: 5px;
 }
 
 #numsContainer > button {
     /* color: blue; */
-    font-size: 48px;
+    font-size: 36px;
     font-weight: 600;
-    width: 60px;
-    flex-grow: 1;
+    width: 30%;
+    flex-grow: 2;
+}
+
+#dot {
+    flex-basis: 0;
 }
 
 #operatorsContainer {
     /* background-color: blue; */
     flex: 1;
-    padding: 5px 0 ;
+    padding: 0 5px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
-    gap: 10px;
+    gap: 5px;
 }
 
 #operatorsContainer > button {
     /* color: red; */
-    font-size: 18px;
+    font-size: 28px;
     font-weight: 600;
-    width: 50px;
+    /* width: 50px; */
     flex: 1;
 }
