--- a/style.css
+++ b/style.css
@@ -27,18 +27,25 @@ body {
     gap: 20px;
 }
 
-#inputBox{
-    height: 60px;
+#displayBox{
+    height: 100px;
     width: 100%;
     background-color: aliceblue;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
     padding: 0 20px;
     font-size: 28px;
     font-weight: 600;
     border: 2px solid black;
     border-radius: 4px;
+}
+
+#historialBox {
+    font-size: 18px;
+    color: darkslategray;
+    font-weight: 100;
 }
 
 #btnsContainer {
